# pbvision

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml  result.json
api/app/: jobs.py  main.py
api/frontend/: index.html
engine/pbengine/: __init__.py  errors.py  fixtures.py  pipeline.py
engine/pbengine/ball/: __init__.py  camera.py  diag.py  kalman.py  size.py  tracker.py  trajectory3d.py  wasb.py
engine/pbengine/bounce/: __init__.py  heuristic.py
engine/pbengine/court/: __init__.py  court_model.py  detector.py  homography.py
engine/pbengine/detect/: __init__.py  bytetrack_sensitive.yaml  players.py  pose.py  presets.py
engine/pbengine/io/: __init__.py  video.py
engine/pbengine/players/: interpolate.py  pose3d.py  select.py  stitch.py
engine/pbengine/rally/: __init__.py  segmentation.py  serve.py  shots.py  winner.py
engine/pbengine/schema/: __init__.py  models.py
engine/tests/: test_ball.py  test_bounce.py  test_court.py  test_degradation.py  test_fixtures.py  test_gap_report.py  test_homography.py  test_kalman.py  test_manual_court.py  test_player_interpolate.py  test_player_select.py  test_player_stitch.py  test_players.py  test_pose3d.py  test_presets.py  test_rally.py  test_schema.py  test_shots.py  test_trajectory3d.py  test_wasb.py  test_winner.py
scripts/: debug_3d.py  debug_ball.py  debug_court.py  download_weights.sh  overlay_ball.py  run_local.sh
